tests/calico_testcases/example_policies/testcase2/testcase2-global-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase2-global-networkpolicy
spec:
  selector: has(tier)
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: unique-label == 'vendor-systemNameSpace'
