tests/calico_testcases/example_policies/testcase2/testcase2-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase2-networkpolicy
  namespace: kube-system
spec:
  selector: has(tier)
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: unique-label == 'vendor-systemNameSpace'
