tests/calico_testcases/example_policies/testcase2/testcase2-open-vendor-system.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-networkpolicy-open-default-namespace
  namespace: vendor-system
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow
