tests/calico_testcases/example_policies/testcase2/testcase2-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkPolicyLists:
  - name: local_np
    networkPolicyList:
      - testcase2-networkpolicy.yaml
      - testcase2-open-vendor-system.yaml
    expected_warnings: 0

  - name: global_np
    networkPolicyList:
      - testcase2-global-networkpolicy.yaml
      - testcase2-open-vendor-system.yaml
    expected_warnings: 0

queries:
  - name: no_emptiness
    emptiness:
      - local_np
      - global_np
    expected: 0

  - name: no_vacuous
    vacuity:
      - local_np
      - global_np
    expected: 0

  - name: redundancy_all
    redundancy:
      - local_np
      - global_np
    expected: 0

  - name: local_np_no_contain_global_np
    containment:
      - local_np
      - global_np
    expected: 0
  - name: global_np_contains_local_np
    containment:
      - global_np
      - local_np
    expected: 1


  - name: global_interferes_local
    interferes:
      - local_np
      - global_np
    expected: 1
  - name: local_no_interferes_global
    interferes:
      - global_np
      - local_np
    expected: 0
